# Fairy

./: .env.example  CONTRIBUTING.md  README.md  env.template  langgraph.json  pyproject.toml
apps/backend/: README.md  env.template  pyproject.toml
apps/backend/app/: __init__.py  logging_utils.py  main.py  models.py  runtime.py
apps/backend/app/api/: events.py  messages.py  sessions.py
apps/backend/app/pipeline/: __init__.py  orchestrator.py
apps/backend/app/realtime/: pubsub.py
apps/backend/app/storage/: sqlite.py
apps/frontend/: .gitignore  README.md  env.template  package.json
apps/frontend/app/: layout.tsx  page.tsx
notebook/: 1_scoping.ipynb  2_research_agent.ipynb
src/fairy/: init_model.py  multi_agent_supervisor.py  prompts.py  research_agent.py  research_agent_full.py  research_agent_mcp.py  research_agent_scope.py  utils.py
